[build-system]
requires = ["hatchling", "requests"]
build-backend = "hatchling.build"

[project]
name = "fewerai"
version = "3.0.2"
authors = [
  { name="FewerElk", email="fewerelk@gmail.com" },
]
description = "A simple ai"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fewerai"]

[project.urls]
Homepage = "https://github.com/FewerElk/FewerAI"
Issues = "https://github.com/FewerElk/FewerAI/issues"
